--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "helvetica neue";
-  font-family: monospace;
 }
 
 html, body {
@@ -12,60 +11,41 @@ html, body {
 }
 
 body, main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background-color: black;
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: left;
+  align-items: start;
 }
 
-.box {
-  height: 300px;
-  width: 500px;
+.card {
+  height: 350px;
+  width: 300px;
   background-color: white;
-  border-radius: 20px;
-  padding: 20px;
+  padding: 25px;
+  border-radius: 10px;
+  text-align: center;
 }
-.box P {
-  font-size: 20px;
-  padding: 15px;
-}
-.box P span {
-  color: blue;
-}
-.box .outer {
-  height: 30px;
-  width: 100%;
-  border-radius: 20px;
+.card img {
+  height: 150px;
+  width: 150px;
+  -o-object-fit: fill;
+     object-fit: fill;
+  border-radius: 50%;
   margin-bottom: 15px;
-  background-color: rgb(158, 155, 155);
-  overflow: hidden;
 }
-.box .outer .inner {
-  height: 30px;
-  width: 0;
-  background-color: green;
-  border-radius: 20px;
+.card h3 {
+  font-size: 26px;
+  margin: 8px;
+  white-space: nowrap;
 }
-.box .mid {
+.card h4 {
   font-size: 20px;
-  padding: 0 15px;
+  margin: 8px;
+  color: crimson;
 }
-.box .bottum {
-  display: flex;
-  margin-top: 100px;
-  justify-content: space-between;
-  align-items: center;
-}
-.box .bottum h2 {
-  font-size: 45px;
-}
-.box .bottum button {
-  padding: 15px 30px;
-  background-color: green;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  font-size: 20px;
-  letter-spacing: 1px;
+.card p {
+  padding: 10px;
 }/*# sourceMappingURL=style.css.map */
